--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,53 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+@import url("https://fonts.googleapis.com/css2?family=Work+Sans:wght@300&display=swap");
+body {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-family: "Work Sans";
+}
+#root {
+  width: 30%;
+  padding-top: 10vh;
+}
+#inputCont {
+  width: 100%;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+}
+#inputCont input {
+  font-family: "Work Sans";
+  font-size: 20px;
+  border: 2px solid darkgray;
+  border-radius: 5px;
+}
+#input {
+  width: 300px;
+  margin-right: 10px;
+}
+#numbersList {
+  padding-left: 0;
+}
+#numbersList li {
+  width: 100%;
+  list-style: none;
+  display: flex;
+  margin: 0;
+  margin-top: 2px;
+  justify-content: space-between;
+}
+#numbersList li p {
+  margin: 0;
+  width: 300px;
+  border: 2px solid darkgray;
+  border-radius: 5px;
+}
+#numbersList li button {
+  font-family: "Work Sans";
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background-color: red;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  text-align: center;
+  justify-self: right;
 }
